@@ -26,8 +26,10 @@
 
 #include "CoreFoundation/CFRuntime.h"
 #include "CoreFoundation/CFBase.h"
+#include "CoreFoundation/CFSet.h"
 #include "CoreFoundation/CFString.h"
 #include "CoreFoundation/CFUUID.h"
+#include "GSPrivate.h"
 
 /* Some of the code in CFUUID is based on Etoile's ETUUID class.
    Copyright (C) 2007 Yen-Ju Check <yjchenx AT gmail DOT com> */
@@ -50,33 +52,13 @@
   #define UNICODE
   #include <windows.h>
   #include <stdlib.h>
-BOOLEAN (APIENTRY *RtlGenRandom)(PVOID, ULONG) = NULL;
-
-BOOLEAN _random_fallback (PVOID bytes, ULONG length)
-{
-  while (length > 0)
-    ((UInt8*)bytes)[--length] = (UInt8)(rand () >> 16);
-}
+BOOLEAN (APIENTRY *RtlGenRandom)(PVOID, ULONG);
 
 static void CFsrandomdev (void)
 {
-  HMODULE lib = LoadLibrary (L"advapi32.dll");
-  if (lib)
-    {
-      RtlGenRandom = (BOOLEAN(APIENTRY*)(PVOID,ULONG))GetProcAddress (lib,
-        "SystemFunction036");
-    }
-  else
-    {
-      struct timeval tv;
-      unsigned int seed = 0;
-      
-      gettimeofday(&tv, NULL);
-      seed = ((getpid() << 16) ^ tv.tv_sec ^ tv.tv_usec ^ time(NULL));
-      
-      srand(seed);
-      RtlGenRandom = _random_fallback;
-    }
+  HMODULE lib = LoadLibraryW (L"advapi32.dll");
+  RtlGenRandom = (BOOLEAN(APIENTRY*)(PVOID,ULONG))GetProcAddress (lib,
+    "SystemFunction036");
 }
 #else
   #include <sys/time.h>
@@ -88,13 +70,13 @@ static void CFsrandomdev (void)
     #include <errno.h>
 static void CFsrandomdev(void)
 {
-	int fd;
-	unsigned int seed = 0;
-	size_t len = sizeof(seed);
-	Boolean hasSeed = false;
+  int fd;
+  unsigned int seed = 0;
+  size_t len = sizeof(seed);
+  Boolean hasSeed = false;
   
-	fd = open("/dev/random", O_RDONLY | O_NONBLOCK, 0);
-	if (fd >= 0) 
+  fd = open("/dev/random", O_RDONLY | O_NONBLOCK, 0);
+  if (fd >= 0) 
     {
       if (errno != EWOULDBLOCK)
         {
@@ -104,31 +86,33 @@ static void CFsrandomdev(void)
       close(fd);
     }
   
-	if (hasSeed == false) 
+  if (hasSeed == false) 
     {
       struct timeval tv;
       
       gettimeofday(&tv, NULL);
       seed = ((getpid() << 16) ^ tv.tv_sec ^ tv.tv_usec ^ time(NULL));
     }
-	
-	srandom(seed);
+  
+  srandom(seed);
 }
-    #else
+  #else
 static void CFsrandomdev(void)
 {
-	struct timeval tv;
-	unsigned int seed = 0;
+  struct timeval tv;
+  unsigned int seed = 0;
   
-	gettimeofday(&tv, NULL);
-	seed = ((getpid() << 16) ^ tv.tv_sec ^ tv.tv_usec ^ time(NULL));
+  gettimeofday(&tv, NULL);
+  seed = ((getpid() << 16) ^ tv.tv_sec ^ tv.tv_usec ^ time(NULL));
   
-	srandom(seed);
+  srandom(seed);
 }
-    #endif
+  #endif
 #endif
 
 static CFTypeID _kCFUUIDTypeID = 0;
+static GSMutex _kCFUUIDLock;
+static CFMutableSetRef _kCFUUIDConstants = NULL;
 
 struct __CFUUID
 {
@@ -137,36 +121,56 @@ struct __CFUUID
 };
 
 static Boolean
-CFUUIDEqual (CFTypeRef cf1, CFTypeRef cf2)
+CFUUIDBytesEqual (const void *b1, const void *b2)
 {
-  CFUUIDBytes bytes1 = ((CFUUIDRef)cf1)->_bytes;
-  CFUUIDBytes bytes2 = ((CFUUIDRef)cf2)->_bytes;
-  
-  if (bytes1.byte0 == bytes2.byte0
-      && bytes1.byte1 == bytes2.byte1
-      && bytes1.byte2 == bytes2.byte2
-      && bytes1.byte3 == bytes2.byte3
-      && bytes1.byte4 == bytes2.byte4
-      && bytes1.byte5 == bytes2.byte5
-      && bytes1.byte6 == bytes2.byte6
-      && bytes1.byte7 == bytes2.byte7
-      && bytes1.byte8 == bytes2.byte8
-      && bytes1.byte9 == bytes2.byte9
-      && bytes1.byte10 == bytes2.byte10
-      && bytes1.byte11 == bytes2.byte11
-      && bytes1.byte12 == bytes2.byte12
-      && bytes1.byte13 == bytes2.byte13
-      && bytes1.byte14 == bytes2.byte14
-      && bytes1.byte15 == bytes2.byte15)
+  CFUUIDBytes *bytes1 = (CFUUIDBytes*)b1;
+  CFUUIDBytes *bytes2 = (CFUUIDBytes*)b2;
+  if (bytes1->byte0 == bytes2->byte0
+      && bytes1->byte1 == bytes2->byte1
+      && bytes1->byte2 == bytes2->byte2
+      && bytes1->byte3 == bytes2->byte3
+      && bytes1->byte4 == bytes2->byte4
+      && bytes1->byte5 == bytes2->byte5
+      && bytes1->byte6 == bytes2->byte6
+      && bytes1->byte7 == bytes2->byte7
+      && bytes1->byte8 == bytes2->byte8
+      && bytes1->byte9 == bytes2->byte9
+      && bytes1->byte10 == bytes2->byte10
+      && bytes1->byte11 == bytes2->byte11
+      && bytes1->byte12 == bytes2->byte12
+      && bytes1->byte13 == bytes2->byte13
+      && bytes1->byte14 == bytes2->byte14
+      && bytes1->byte15 == bytes2->byte15)
     return true;
   
   return false;
 }
 
+static CFHashCode
+CFUUIDBytesHash (const void *bytes)
+{
+  return GSHashBytes (bytes, 16);
+}
+
+static Boolean
+CFUUIDEqual (CFTypeRef cf1, CFTypeRef cf2)
+{
+  CFUUIDBytes bytes1 = ((CFUUIDRef)cf1)->_bytes;
+  CFUUIDBytes bytes2 = ((CFUUIDRef)cf2)->_bytes;
+  
+  return CFUUIDBytesEqual (&bytes1, &bytes2);
+}
+
+static CFHashCode
+CFUUIDHash (CFTypeRef cf)
+{
+  return GSHashBytes ((const void*)&((CFUUIDRef)cf)->_bytes, 16);
+}
+
 static CFStringRef
 CFUUIDCopyFormattingDescription (CFTypeRef cf, CFDictionaryRef formatOptions)
 {
-  return CFUUIDCreateString (CFAllocatorGetDefault(), cf);
+  return CFUUIDCreateString(NULL, cf);
 }
 
 const CFRuntimeClass CFUUIDClass =
@@ -177,7 +181,7 @@ const CFRuntimeClass CFUUIDClass =
   NULL, // copy
   NULL, // dealloc
   CFUUIDEqual, // equal
-  NULL, // hash
+  CFUUIDHash, // hash
   CFUUIDCopyFormattingDescription, // copyFormattingDesc
   NULL  // copyDebugDesc
 };
@@ -186,6 +190,7 @@ void CFUUIDInitialize (void)
 {
   INITRANDOM();
   _kCFUUIDTypeID = _CFRuntimeRegisterClass (&CFUUIDClass);
+  GSMutexInitialize (&_kCFUUIDLock);
 }
 
 
@@ -193,12 +198,12 @@ void CFUUIDInitialize (void)
 CFUUIDRef
 CFUUIDCreate (CFAllocatorRef alloc)
 {
-  CFIndex i;
   CFUUIDBytes bytes;
   
 #if defined(_WIN32)
   RtlGenRandom ((void*)&bytes, sizeof(bytes));
 #else
+  CFIndex i;
   for (i = 0 ; i < 16 ; ++i)
     {
       long r = random ();
@@ -220,12 +225,12 @@ CFUUIDCreateFromString (CFAllocatorRef alloc, CFStringRef uuidStr)
   CFUUIDBytes bytes;
   char data[36]; // 36 chars
   if (!CFStringGetCString (uuidStr, data, 36, kCFStringEncodingASCII))
-	sscanf (data, "%2hhx%2hhx%2hhx%2hhx-%2hhx%2hhx-%2hhx%2hhx-%2hhx%2hhx-"
-  "%2hhx%2hhx%2hhx%2hhx%2hhx%2hhx",
-    &bytes.byte0, &bytes.byte1, &bytes.byte2, &bytes.byte3,
-    &bytes.byte4, &bytes.byte5, &bytes.byte6, &bytes.byte7,
-    &bytes.byte8, &bytes.byte9, &bytes.byte10, &bytes.byte11,
-    &bytes.byte12, &bytes.byte13, &bytes.byte14, &bytes.byte15);
+    return NULL;
+  
+  sscanf (data, "%4hx%4hx-%4hx-%4hx-%4hx-4hx%4hx%4hx",
+    (UInt16*)&bytes.byte1,(UInt16*)&bytes.byte3, (UInt16*)&bytes.byte5,
+    (UInt16*)&bytes.byte7, (UInt16*)&bytes.byte9, (UInt16*)&bytes.byte11,
+    (UInt16*)&bytes.byte13, (UInt16*)&bytes.byte15);
   
   return CFUUIDCreateFromUUIDBytes (alloc, bytes);
 }
@@ -292,7 +297,41 @@ CFUUIDGetConstantUUIDWithBytes (CFAllocatorRef alloc, UInt8 byte0, UInt8 byte1,
   UInt8 byte8, UInt8 byte9, UInt8 byte10, UInt8 byte11, UInt8 byte12,
   UInt8 byte13, UInt8 byte14, UInt8 byte15)
 {
-  return NULL; // FIXME
+  CFUUIDRef uuid;
+  CFUUIDBytes uuidBytes;
+  CFSetCallBacks cb = {0, NULL, NULL, NULL, CFUUIDBytesEqual, CFUUIDBytesHash};
+  
+  uuidBytes.byte0 = byte0;
+  uuidBytes.byte1 = byte1;
+  uuidBytes.byte2 = byte2;
+  uuidBytes.byte3 = byte3;
+  uuidBytes.byte4 = byte4;
+  uuidBytes.byte5 = byte5;
+  uuidBytes.byte6 = byte6;
+  uuidBytes.byte7 = byte7;
+  uuidBytes.byte8 = byte8;
+  uuidBytes.byte9 = byte9;
+  uuidBytes.byte10 = byte10;
+  uuidBytes.byte11 = byte11;
+  uuidBytes.byte12 = byte12;
+  uuidBytes.byte13 = byte13;
+  uuidBytes.byte14 = byte14;
+  uuidBytes.byte15 = byte15;
+  
+  GSMutexLock (&_kCFUUIDLock);
+  if (_kCFUUIDConstants == NULL)
+    _kCFUUIDConstants = CFSetCreateMutable (NULL, 0, &cb);
+  
+  if (!CFSetGetValueIfPresent(_kCFUUIDConstants, &uuidBytes,
+      (const void**)&uuid))
+    {
+      uuid = CFUUIDCreateFromUUIDBytes (NULL, uuidBytes);
+      CFSetAddValue (_kCFUUIDConstants, (const void*)uuid);
+      CFRelease (uuid);
+    }
+  GSMutexUnlock (&_kCFUUIDLock);
+  
+  return uuid;
 }
 
 CFUUIDBytes
